--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "formik-",
   "version": "1.0.0",
   "description": "This is Formik learnings",
-  "main": "index.html",
+  "main": "App.js",
   "scripts": {
-    "test": "Jest"
+    "test": "Jest",
+    "start": "parcel index.html",
+    "build": " parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,8 @@
   "homepage": "https://github.com/amit05sept/Formik#readme",
   "devDependencies": {
     "babel": "^6.23.0",
-    "parcel": "^2.10.2"
+    "parcel": "^2.10.2",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "react": "^18.2.0",
